--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!--Note: I did not write this file! This project came with pre-existing hmtl and css files. The assignment and challenge was to construct a js file without coding the css or html ourselves.-->
+
 <!DOCTYPE html>
 <html lang="en">
 	<head>
